<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.apache.pdfbox</groupId>
	<artifactId>add-audio-gui</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
	</properties>
	<dependencies>
		<!--https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox-->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>3.0.7</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.apache.commons/commons-text-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.15.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.apache.commons/commons-collections4-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.5.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.5.1</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/com.miglayout/miglayout-swing-->
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>11.4.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.github.toolfactory/narcissus -->
		<dependency>
			<groupId>io.github.toolfactory</groupId>
			<artifactId>narcissus</artifactId>
			<version>1.0.11</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.zeroturnaround/zt-zip-->
		<dependency>
			<groupId>org.zeroturnaround</groupId>
			<artifactId>zt-zip</artifactId>
			<version>1.17</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.logevents/logevents-->
		<dependency>
			<groupId>org.logevents</groupId>
			<artifactId>logevents</artifactId>
			<version>0.5.9</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.slf4j/slf4j-api-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.18</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.testng/testng-->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.12.0</version>
			<scope>test</scope>
		</dependency>
		<!--https://mvnrepository.com/artifact/com.google.guava/guava-->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.6.0-jre</version>
			<scope>test</scope>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core-->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.26.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.apache.pdfbox.AddAudioJPanel</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.gaul</groupId>
				<artifactId>modernizer-maven-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<javaVersion>25</javaVersion>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>